circle_5/ft_containers/ft_containers-unit-test/logs.txt
In file included from ../set_tests/using allocator.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.hpp:51:34: error: no matching constructor for initialization of 'ft::red_black_tree<value_type, key_compare>' (aka 'red_black_tree<int, std::__1::less<int> >')
                        : _comp(comp), _alloc(alloc), _tree(value_compare(), alloc)
                                                      ^     ~~~~~~~~~~~~~~~~~~~~~~
../set_tests/__service.ipp:85:19: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, Alloc<int> >::set' requested here
    _set<T, C, A> my_set;
                  ^
../set_tests/using allocator.cpp:12:10: note: in instantiation of function template specialization 'run_set_allocator_unit_test<int, std::__1::less<int>, Alloc<int> >' requested here
    exit(run_set_allocator_unit_test<int, std::less<int>, Alloc<int> >("using allocator", allocator_test));
         ^
../set_tests/../../../red_black_tree.hpp:56:4: note: candidate constructor not viable: no known conversion from 'const ft::set<int, std::__1::less<int>, Alloc<int> >::allocator_type' (aka 'const Alloc<int>') to 'const ft::red_black_tree<int, std::__1::less<int>, std::__1::allocator<int> >::allocator_type' (aka 'const std::__1::allocator<int>') for 2nd argument
                        red_black_tree(value_compare const& comp, allocator_type const& alloc,
                        ^
../set_tests/../../../red_black_tree.hpp:67:4: note: candidate constructor not viable: requires single argument 'ref', but 2 arguments were provided
                        red_black_tree(const red_black_tree &ref)
                        ^
1 error generated.
